Fix some signing